--- a/teslo-shop/.env.template
+++ b/teslo-shop/.env.template
@@ -1,6 +1,8 @@
 
-DB_PASSWORD=MySecr3tPassWord@as2
+DB_PASSWORD=Le22122017
 DB_NAME=TesloDB
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
+HOST_API=http://localhost:3000/api
+PORT=3000
